# pdp-mcp

./: HelloWorld.py  README.md
.github/workflows/: collect-metrics.yml
mcp-for-api-documentation/: NOTICE  README.md  pyproject.toml  setup.py  uv-requirements.txt
mcp-for-api-documentation/jpmc/mcp-for-api-documentation/: __init__.py
mcp-for-api-documentation/jpmc/mcp_for_api_documentation/: __init__.py  models.py  server.py  server_utils.py  util.py
metrics/: README.md  clone-stats-sorted.csv  clone-stats.csv  clone_count.csv  clone_stats.csv  referrer-stats-sorted.csv  referrer-stats.csv  referrer_stats.csv  traffic-stats-sorted.csv  traffic-stats.csv  view_count.csv
pdp-doc-mcp-server/: NOTICE  README.md  pyproject.toml  uv-requirements.txt
pdp-doc-mcp-server/jpmc/: __init__.py
pdp-doc-mcp-server/jpmc/pdp_doc_mcp_server/: models.py  server.py  server_utils.py  util.py
